KQED -/src/objects/Giving_Summary__c.object
<CustomObject>
    <description>This is a custom area to identify the giving over multiple years by type i.e. Capital Campaign giving for all cumulative years; Major Gift giving for all cumulative years; membership giving, in kind, underwriting and sales.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Household or Organization tied to the Giving Summary.</description>
        <inlineHelpText>Household or Organization tied to the Giving Summary.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Giving Summaries (Account)</relationshipLabel>
        <relationshipName>Account_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <description>Contains latest gift type.</description>
        <label>Gift Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GivingIds__c</fullName>
        <description>Contains Opportunity ids for which summary is created.</description>
        <label>GivingIds</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Giving_Level__c</fullName>
        <label>Giving Level</label>
        <picklist>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Basic - 3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fringe Benefit Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hundred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archangel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Mid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grace_Date__c</fullName>
        <label>Grace Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>History_Date_Time__c</fullName>
        <label>History Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGrace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGrace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lapsed_Date__c</fullName>
        <label>Lapsed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lapsed_Period__c</fullName>
        <label>Lapsed Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Largest_Giving_Source__c</fullName>
        <description>TA: largest_source</description>
        <inlineHelpText>The Campaign Name of the largest donation to this Giving Summary.</inlineHelpText>
        <label>Largest Giving Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Year__c</fullName>
        <label>Member Year</label>
        <picklist>
            <picklistValues>
                <fullName>Current Year</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous - 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Yr_Status__c</fullName>
        <label>Member Yr Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Giving_Amount__c</fullName>
        <description>TA: last_amt</description>
        <inlineHelpText>The most recent pledge amount for this Giving Summary.</inlineHelpText>
        <label>Most Recent Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Giving_Date__c</fullName>
        <description>TA: last_date</description>
        <inlineHelpText>The most recent pledge date for this Giving Summary.</inlineHelpText>
        <label>Most Recent Giving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Giving_Source__c</fullName>
        <description>TA: last_source</description>
        <inlineHelpText>The most recent Campaign Name on pledge for this Giving Summary.</inlineHelpText>
        <label>Most Recent Giving Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Payment_Date__c</fullName>
        <description>TA: last_pd</description>
        <inlineHelpText>The date of the most recent payment on a gift to this Giving Summary.</inlineHelpText>
        <label>Most Recent Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shopper_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Shopper count indicating the number of additional gifts to On-air or Web sources with premiums.</description>
        <inlineHelpText>Count indicating the number of additional gifts to On-air or Web sources with premiums.  Once this is &gt;= 3, the shopper flag will be checked for that member year on that Giving Summary.</inlineHelpText>
        <label>Shopper Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shopper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shopper flag indicating more than 3 additional gifts to On-air or Web sources with premiums.</description>
        <inlineHelpText>Flag indicating a donor gives more than 3 additional gifts to Annual On-air or Web sources with premiums.</inlineHelpText>
        <label>Shopper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solicitation_Cycle1__c</fullName>
        <label>Solicitation Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Paymen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>The station of the Giving Summaries displayed.</inlineHelpText>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>KCRW</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>KQED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_Count__c</fullName>
        <label>Summary Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TA_AActivity_ID__c</fullName>
        <externalId>true</externalId>
        <label>TA AActivity ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Member_Yr_Amount__c</fullName>
        <formula>current_mem_yr_renew_amt__c + current_mem_yr_add_amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Member Yr Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Years_Since_First_Gift__c</fullName>
        <description>Number of years since first gift to Station/Giving Summary.</description>
        <inlineHelpText>Number of years since donor&apos;s first gift to Station/Giving Summary.</inlineHelpText>
        <label>Years Since First Gift</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_Since_Previous_Gift__c</fullName>
        <description>Current year giving summary start date year - previous year giving summary start date, in years</description>
        <inlineHelpText>Number of years between current renewal and previous renewal donation by donor to this Giving Summary.</inlineHelpText>
        <label>Years Since Previous Gift</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>current_fis_yr_amt__c</fullName>
        <description>TA: current_fis_yr_amt</description>
        <inlineHelpText>The Current Fiscal Year Pledge Amount for this Giving Summary.</inlineHelpText>
        <label>Current FY Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_fis_yr_pd__c</fullName>
        <description>TA: current_fis_yr_pd</description>
        <inlineHelpText>The Current Fiscal Year Paid Amount for this Giving Summary.</inlineHelpText>
        <label>Current FY Paid Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_add_amt__c</fullName>
        <description>TA: current_mem_yr_add_amt</description>
        <inlineHelpText>The total addgift amount in the donor&apos;s member year for this Giving Summary.</inlineHelpText>
        <label>Member Yr Addgift Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_amt__c</fullName>
        <description>TA: current_mem_yr_amt</description>
        <inlineHelpText>The sum of the Member Year Amount and Member Year Addgift Amount for this Giving Summary.  Giving Level is based on this value.</inlineHelpText>
        <label>Total Member Yr Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_renew_amt__c</fullName>
        <description>TA: current_mem_yr_renew_amt</description>
        <inlineHelpText>The renewal amount in the donor&apos;s member year for this Giving Summary.</inlineHelpText>
        <label>Member Yr Renew Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_mem_yr_renew_date__c</fullName>
        <description>TA: current_mem_yr_renew_date</description>
        <inlineHelpText>The donor&apos;s member year renewal date for this Giving Summary.</inlineHelpText>
        <label>Member Yr Renew Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>expiration_date__c</fullName>
        <description>Expiration Date: TA expiration_date</description>
        <inlineHelpText>Expiration Date of Membership Year for this Giving Summary.  The field can be edited to change a donor&apos;s expiration date for that Giving Summary.  The format should be MM/01/YYYY and is good through the end of that month.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>first_amt__c</fullName>
        <description>First Pledge Amount: TA first_amt</description>
        <inlineHelpText>First donation amount to this Giving Summary.</inlineHelpText>
        <label>First Gift Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>first_date__c</fullName>
        <description>TA: first_date</description>
        <inlineHelpText>Date of first donation to this Giving Summary</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>first_source__c</fullName>
        <description>TA: first_source</description>
        <inlineHelpText>Source of first donation to this Giving Summary</inlineHelpText>
        <label>First Gift Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>largest_date__c</fullName>
        <description>TA: largest_date</description>
        <inlineHelpText>The date of the largest donation to this Giving Summary.</inlineHelpText>
        <label>Largest Giving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>largest_recent_amt__c</fullName>
        <description>TA: largest_amt</description>
        <inlineHelpText>The largest amount pledged to this Giving Summary.</inlineHelpText>
        <label>Largest Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_fis_yr_amt__c</fullName>
        <description>TA: last_fis_yr_amt</description>
        <inlineHelpText>The Previous Fiscal Year Pledge Amount for this Giving Summary.</inlineHelpText>
        <label>Previous FY Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_fis_yr_pd__c</fullName>
        <description>TA: last_fis_yr_pd</description>
        <inlineHelpText>Previous Fiscal Year Pledge Amount for this Giving Summary.</inlineHelpText>
        <label>Previous FY Paid Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <description>TA: start_date</description>
        <inlineHelpText>The start date of the donor&apos;s membership year for this Giving Summary.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>total_amt__c</fullName>
        <description>TA: total_amt</description>
        <inlineHelpText>Total pledged in donor&apos;s lifetime for this station or Giving Summary.</inlineHelpText>
        <label>Total Giving Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_pd__c</fullName>
        <description>TA: total_pd</description>
        <inlineHelpText>Total paid in donor&apos;s lifetime for this station or Giving Summary.</inlineHelpText>
        <label>Total Paid Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>track__c</fullName>
        <description>TA: track</description>
        <inlineHelpText>Gift type and Response mechanism tied to the renewal donation for this Giving Summary.  For example: New by Pledge or Renew by Email.</inlineHelpText>
        <label>Track</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Giving Summary</label>
    <nameField>
        <displayFormat>GS#-{0000000000}</displayFormat>
        <label>Giving Summary #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Giving Summaries</pluralLabel>
    <recordTypes>
        <fullName>Annual_Giving</fullName>
        <active>true</active>
        <label>Annual Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Auction_Giving</fullName>
        <active>true</active>
        <label>Auction Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Capital_Campaign_Giving</fullName>
        <active>true</active>
        <label>Capital Campaign Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Giving</fullName>
        <active>true</active>
        <label>Events Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation_Giving</fullName>
        <active>true</active>
        <label>Foundation Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Kind_Gifts</fullName>
        <active>true</active>
        <label>In-Kind Gifts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Matching_Gifts</fullName>
        <active>true</active>
        <label>Matching Gifts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Planned_Giving</fullName>
        <active>true</active>
        <label>Planned Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restricted_Giving</fullName>
        <active>true</active>
        <label>Restricted Giving</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Giving</fullName>
        <active>true</active>
        <label>Sales Giving</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>